# allocpp

./: CMakeLists.txt  alloc_policies.hpp  alloc_traits.hpp  allocator.h  allocator.hpp  allocator.pro  memory_pool.hpp  pointer_cast.hpp  test.cpp
allocator/: alloc_policies.hpp  alloc_traits.hpp  allocator.hpp  macro.hpp  none_policy.hpp  pool_allocation.hpp  statistic_policy.hpp
allocator/details/: memory_pool.hpp
allocpp/: CMakeLists.txt
allocpp/include/liballocpp/: alloc_messaging.hpp  types.hpp
allocpp/include/liballocpp/concept/: concept.hpp
allocpp/include/liballocpp/concepts/: concepts.hpp  pointer_concept_tag.hpp  tags.hpp
allocpp/include/liballocpp/plcs/: bitmap_pool_layout.hpp  block_layout.hpp  dynamic_region.hpp  malloc.hpp  memory_resource.hpp  null.hpp  static_region.hpp
allocpp/include/liballocpp/ptrs/: block_ptr.hpp  pointer_decorator.hpp
allocpp/include/liballocpp/util/: pointer_traits.hpp
allocpp/include/liballocpp/utils/: any.hpp  math.hpp  pointer.hpp  pointer_traits.hpp  scope_guard.hpp  util.hpp
allocpp/src/: malloc.cpp
benchmark/: CMakeLists.txt  main.cpp  malloc.cpp  mmap.cpp
include/allocator/: alloc_policies.hpp  alloc_traits.hpp  alloc_type_traits.hpp  allocation_request.hpp  allocation_response.hpp  allocation_traits.hpp  allocator.hpp  deallocation_request.hpp  deallocation_response.hpp  linear_allocation.hpp  macro.hpp  macro_alloc.hpp  macro_traits.hpp  none_policy.hpp  pointer_cast.hpp  pointer_concepts.hpp  pool_allocation.hpp  statistic_policy.hpp
include/allocator/concepts/: alloc_policy_concept.hpp  pointer_concepts.hpp
include/allocator/details/: alloc_type_traits.hpp  is_swappable.hpp  linear_storage.hpp  memory_pool.hpp  policies_list.hpp  rebind.hpp
include/allocator/plc/: allocation_mechanism.hpp  malloc_mechanism.hpp  none.hpp
include/allocator/ptr/: pointer_factory.hpp
test/: CMakeLists.txt  alloc_type_traits_test.cpp  concepts_test.cpp  linear_alloc_test.cpp  pointer_concepts_test.cpp  pointer_decorator_test.cpp  policies_list_test.cpp  policies_test.cpp  pool_test.cpp  rebind_test.cpp  smoke_test.cpp  statistic_policy_test.cpp  stl_test.cpp  test_types.hpp  tmp.cpp
test/concepts/: concepts_test.cpp
test/details/: alloc_type_traits_test.cpp  policies_list_test.cpp  rebind_test.cpp
test/plc/: malloc_allocation_test.cpp
test/plcs/: bitmap_pool_layout_test.cpp  malloc_test.cpp  null_test.cpp  regions_test.cpp
test/ptrs/: pointer_decorator_test.cpp
